# openkeyword

./: .github-publish-checklist.txt  .github-release-notes.md  CHANGELOG.md  FREE_KEYWORD_SOURCES.md  GEMINI_VS_DATAFORSEO.md  POST_PUBLISH_SUMMARY.md  PYPI_PUBLISHING.md  README.md  SAMPLE_OUTPUT_SCAILE.md  SECURITY.md  SPEED_AND_PERFORMANCE.md  modal_deploy.py  pyproject.toml  test_company_analysis_only.py  test_enhanced_capture.py  test_free_stack.py  test_gemini_serp.py  test_quality_check.py  test_scaile_full.py
examples/: basic_usage.py  multilingual.py  with_seranking.py
openkeywords/: __init__.py  autocomplete_analyzer.py  citation_generator.py  cli.py  company_analyzer.py  dataforseo_client.py  gemini_serp_analyzer.py  generator.py  google_trends_analyzer.py  models.py  researcher.py  serp_analyzer.py  url_extractor.py
test-output/: scaile_full_test_citations.md  test_enhanced_capture_citations.md
tests/: test_gemini_serp_analyzer.py  test_models.py  test_serp_analyzer.py
